# ds_git_homework

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  justfile  mypy.ini  pyproject.toml
.github/: ISSUE_TEMPLATE.md
configs/: experiment.yaml  grid.yaml
docker/: api.Dockerfile  serve.Dockerfile  train.Dockerfile
docs/: index.md  installation.md  usage.md
scripts/: load_test.py  run_grid.sh
src/ds_git_homework/: __init__.py  cli.py  ds_git_homework.py  pipeline.py  utils.py
src/ds_git_homework/experiments/: config.py  train.py
src/ds_git_homework/processing/: transform.py
src/ds_git_homework/s3/: client.py  io.py
src/ds_git_homework/serving/: api.py  app.py  model_loader.py
tests/: __init__.py  test_ds_git_homework.py
