[project]
name = "ds_git_homework"
version = "0.1.0"
description = "Homework for git, linters and tooling"
readme = "README.md"
authors = [
  {name = "Spitsin Savelii", email = "spisava@gmail.com"}
]
maintainers = [
  {name = "Spitsin Savelii", email = "spisava@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/safffka/ds_git_homework/issues"
changelog = "https://github.com/safffka/ds_git_homework/blob/master/changelog.md"
homepage = "https://github.com/safffka/ds_git_homework"

[project.scripts]
ds_git_homework = "ds_git_homework.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
