[project]
name = "ds_git_homework"
version = "0.1.0"
description = "Homework for git, linters and tooling"
readme = "README.md"
authors = [
  { name = "Spitsin Savelii", email = "spisava@gmail.com" }
]
maintainers = [
  { name = "Spitsin Savelii", email = "spisava@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"

dependencies = [
  "typer",
  "rich",
  "boto3",
  "flake8>=7.0.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0",
  "pytest",
]

[project.urls]
homepage = "https://github.com/safffka/ds_git_homework"
bugs = "https://github.com/safffka/ds_git_homework/issues"
changelog = "https://github.com/safffka/ds_git_homework/blob/main/HISTORY.md"

[project.scripts]
ds_git_homework = "ds_git_homework.cli:app"
